<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">有米积分广告Demo</string>
    <string name="action_settings">设置</string>
    <string name="btn_show_offerswall">展示积分墙(全屏)</string>
    <string name="btn_show_offerswall_dialog">展示积分墙(对话框)</string>
    <string name="btn_show_shareswall">展示分享墙(全屏)</string>
    <string name="btn_show_shareswall_dialog">展示分享墙(对话框)</string>
    <string name="btn_award_points">奖励10积分</string>
    <string name="btn_spend_points">消费20积分</string>
    <string name="btn_get_online_config">获取有米在线参数</string>
    <string name="btn_check_reach_ntp_time">是否达到指定网络时间</string>
    <string name="btn_check_ad_config">检查广告配置</string>

</resources>